--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -2,10 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>PigLatinizer!</title>
   </head>
+
   <body>
-    <h1>Pig Latinizer</h1>
-  
+    <h1>Pig Latinizer!</h1>
+    <form method="post" action="/user_input">
+      <p>Enter your phrase: <input type="text" name="user_phrase"></p>
+      <p><input type="submit" id="Submit"></p>
+    </form>
   </body>
 </html>
