--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,7 +5,9 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
-  
+    <h1>Pig Latinizer!</h1>
+    <form method="POST" action="/piglatinize"><label>Enter your phrase: <input type="text" name="user_phrase" id=""user_phrase></label>
+    <input type="submit" value="Submit">
+    </form>
   </body>
 </html>
