--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,7 +5,12 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
-  
+    <h1>Pig Latinizer!</h1>
+    <form method="POST" acion="/piglatinize">
+    <p> Enter your phrase:<p>
+    <textarea name="user_phrase"></textarea>
+    <br>
+    <button type="submit"> Sumbit </button>
+    </form>
   </body>
 </html>
